Fixed bug with ingredients list, and left aligned ingredients list

--- a/app/assets/stylesheets/components/_tables.scss
+++ b/app/assets/stylesheets/components/_tables.scss
@@ -100,7 +100,8 @@
   	height: 80px;
   	overflow: auto;
   	list-style: none;
-  	margin-left: none;
+	margin: 0;
+	padding: 0;
 
     li {
     	display: block;
